--- a/po/wesnoth-aoi/pl.po
+++ b/po/wesnoth-aoi/pl.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2011-11-16 12:43+0100\n"
-"PO-Revision-Date: 2009-11-10 15:19+0100\n"
+"POT-Creation-Date: 2011-12-05 16:25+0100\n"
+"PO-Revision-Date: 2011-04-12 11:15+0100\n"
 "Last-Translator: Zbigniew Banach <z.banach@wsisiz.edu.pl>\n"
 "Language-Team: none\n"
 "Language: \n"
@@ -12,7 +12,8 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
 "|| n%100>=20) ? 1 : 2);\n"
-"X-Poedit-Basepath: /home/karol/programowanie/wesnoth/wesnoth-git\n"
+"X-Poedit-Basepath: /usr/local/share/wesnoth/\n"
+"X-Poedit-SearchPath-0: /usr/local/share/wesnoth\n"
 
 #. [campaign]: id=An_Orcish_Incursion
 #: data/campaigns/An_Orcish_Incursion/_main.cfg:11
@@ -88,7 +89,7 @@ msgstr "Zmiany w historii i rozgrywce od wersji 1.4"
 #. [about]
 #: data/campaigns/An_Orcish_Incursion/_main.cfg:53
 msgid "Artwork and Graphics Design"
-msgstr ""
+msgstr "Grafika i projektowanie graficzne"
 
 #. [about]
 #: data/campaigns/An_Orcish_Incursion/_main.cfg:60
@@ -346,9 +347,8 @@ msgstr "Panie!"
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg:216
-#, fuzzy
 msgid "Take... command... Drive them... away."
-msgstr "Przejmij...dowodzenie...Wypędź...ich."
+msgstr "Przejmij... dowodzenie... Odeprzyj... ich."
 
 #. [message]: speaker=narrator
 #: data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg:220
@@ -362,15 +362,14 @@ msgstr ""
 
 #. [message]: speaker=unit
 #: data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg:232
-#, fuzzy
 msgid ""
 "I’ve been bested, but the combat wasn’t fair... A thousand curses on you, "
 "withered coward! May you suffer... and when my master, Rualsha, finds you "
 "may he wipe your people from the face of this earth!"
 msgstr ""
-"Zostałem pokonany, ale walka nie była równa... bądź po stokroć przeklęty, "
-"tchórzliwy słabeuszu! Obyś cierpiał... a gdy mój pan, Rualsha, cię znajdzie, "
-"niech zmiecie twoich ziomków z powierzchni ziemi!"
+"Zostałem pokonany, ale walka nie była równa... Bądź po stokroć przeklęty, "
+"cherlawy tchórzu! Obyś długo cierpiał... a gdy mój pan, Rualsha, cię "
+"znajdzie, oby zmiótł całą twoją rasę z powierzchni ziemi!"
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg:243
@@ -456,22 +455,19 @@ msgstr ""
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:138
-#, fuzzy
 msgid "When the fighting ends, I’ll have some answers. But for now—"
 msgstr "Będę znał odpowiedzi, gdy skończy się walka, ale na razie..."
 
 #. [message]: id=Gharlsa
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:142
-#, fuzzy
 msgid "Gharlsa sees elves... yes... Fresh meat for wolves. Yes, yes..."
 msgstr ""
-"Gharlsa widzi elfy... tak... świeże mięso dla naszych wilków, tak, tak..."
+"Gharlsa widzi elfy... tak... Świeże mięso dla naszych wilków, tak, tak..."
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:146
-#, fuzzy
 msgid "— let’s focus on the task at hand."
-msgstr "...skupmy się na tym co jest do zrobienia."
+msgstr "... skupmy się na tym, co jest do zrobienia."
 
 #. [message]: role=Adviser
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:150
@@ -485,35 +481,31 @@ msgstr "Wygląd może być zwodniczy. Rozkaż ludziom być ostrożnym."
 
 #. [message]: id=Gharlsa
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:165
-#, fuzzy
 msgid "Yes... yes... Slay them!"
 msgstr "Tak... tak... Zgładzić ich!"
 
 #. [message]: speaker=unit
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:176
-#, fuzzy
 msgid "Hurts... failed... Rualsha gonna be angry..."
-msgstr "Boli...porażka...Rualsha będzie wkurzony..."
+msgstr "Boli... porażka... Rualsha się wkurzy..."
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:187
-#, fuzzy
 msgid ""
 "This... ‘Rualsha’ again. We need to forge ahead; the answers we seek are not "
 "here. Perhaps we will find them further north."
 msgstr ""
-"Znowu ten...Rualsha. Musimy iść dalej, tutaj nie znajdziemy odpowiedzi na "
-"nasze pytania. Ruszajmy dalej na północ, może tam je znajdziemy."
+"Znowu ten... Rualsha. Musimy iść dalej, tutaj nie znajdziemy odpowiedzi na "
+"nasze pytania. Ruszajmy dalej na północ, może tam się kryją."
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:191
-#, fuzzy
 msgid ""
 "Destroy this place and let the forest take the ruins. We don’t want any more "
 "undesirables to use it."
 msgstr ""
-"Zniszcz to miejsce, a las zajmie się ruinami. Nie chcemy żeby skorzystali z "
-"niego inni niegodziwcy."
+"Zniszczyć wszystko i niech las pochłonie ruiny. Nie chcemy, by rozgościli "
+"się tu inni niegodziwcy."
 
 #. [scenario]: id=03_Wasteland
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:9
@@ -553,7 +545,6 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:68
-#, fuzzy
 msgid ""
 "Erlornas was near-certain they would find orcs there. No clan of dwarves "
 "would break their ancient treaties with the elves in this way; humans were "
@@ -562,11 +553,11 @@ msgid ""
 "for comfort. The great question remained — would he find Rualsha?"
 msgstr ""
 "Erlornas był prawie pewien, że znajdą tam orki. Żaden klan krasnoludów nie "
-"złamałby w ten sposób swojego starożytnego przymierza z ellfami, a ludzie "
-"nigdy nie wykazywali się taką... metodycznością w sianiu zniszczenia i nie "
-"zapuszczali się na północ dostatecznie dużymi grupami, bo było im tu za "
-"zimno i za wilgotno. Bez odpowiedzi pozostawało najważniejsze pytanie: czy "
-"zdołają odnaleźć Rualshę?"
+"złamałby w ten sposób swojego starożytnego przymierza z elfami, a ludzie "
+"nigdy nie wykazywali się taką metodycznością w dziele zniszczenia. Poza tym "
+"nie zapuszczali się na północ w większych grupach, bo było im tu za zimno i "
+"za wilgotno. Bez odpowiedzi pozostawało najważniejsze pytanie: czy zdołają "
+"odnaleźć Rualshę?"
 
 #. [part]
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:72
@@ -647,26 +638,24 @@ msgstr ""
 
 #. [message]: id=Gnargha
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:198
-#, fuzzy
 msgid "You won... elf... But it changes... nothing... (<i>cough</i>)"
 msgstr ""
-"Załatwiłeś mnie... elfie... Ale to niczego nie zmienia... Niczego... [kaszle]"
+"Pokonałeś mnie... elfie... Ale to niczego nie zmienia... Niczego... "
+"(<i>kaszle</i>)"
 
 #. [message]: id=Gnargha
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:202
-#, fuzzy
 msgid ""
 "We found the way... Now... we will come in numbers... (<i>cough</i>) you "
 "can’t imagine..."
 msgstr ""
-"Znaleźliśmy drogę... Teraz... Przyjdzie nas więcej... [kaszle] Nawet sobie "
-"nie wyobrażasz..."
+"Znaleźliśmy drogę... Teraz... przyjdzie nas więcej... (<i>kaszle</i>) niż "
+"możesz sobie wyobrazić..."
 
 #. [message]: id=Gnargha
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:206
-#, fuzzy
 msgid "(<i>Cough</i>) I’ll be waiting... among the dead..."
-msgstr "[kaszle] Będę czekał... Między zmarłymi..."
+msgstr "(<i>kaszle</i>) Będę czekał... pośród zmarłych..."
 
 #. [message]: speaker=narrator
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:217
@@ -1147,15 +1136,14 @@ msgstr "Meldujcie."
 
 #. [message]: role=Advisor
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:154
-#, fuzzy
 msgid ""
 "A warband of orcs, no women or children among them, besieges a tower. It’s "
 "of human design... but we are far from the lands granted to humans by "
 "treaty, my lord Erlornas."
 msgstr ""
-"Wataha orków, żadnych dzieci ani kobiet, oblega wieżę. Jej konstrukcja jest "
-"typowo ludzka, jednak jesteśmy daleko od ziem przyznanych ludziom na mocy "
-"traktatu, lordzie Erlornas."
+"Wataha orków, żadnych dzieci ani kobiet, oblega jakąś wieżę. Konstrukcja "
+"wskazuje, że wznieśli ją ludzie... ale jesteśmy daleko od ziem przyznanych "
+"ludziom na mocy traktatu, mój panie."
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:158
@@ -1202,7 +1190,6 @@ msgstr ""
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:178
-#, fuzzy
 msgid ""
 "Interesting... Go to my personal stores and bring me a bottle of wine. And a "
 "couple of glasses."
@@ -1212,9 +1199,8 @@ msgstr ""
 
 #. [message]: role=Advisor
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:182
-#, fuzzy
 msgid "... Glasses?"
-msgstr "...kieliszków?"
+msgstr "... Kieliszków?"
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:186
@@ -1254,13 +1240,12 @@ msgstr "Jakiś czas później..."
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:240
-#, fuzzy
 msgid ""
 "So you decided to accept the invitation. Good. Welcome, I am lord Erlornas "
 "of Wesmere. I find your presence here... surprising."
 msgstr ""
-"Więc zdecydowałaś się przyjąć zaproszenie. Wspaniale. Witaj, jestem lord "
-"Erlornas z Wesmere. Twoja obecność tutaj mnie... zaskoczyła."
+"Zatem przyjęłaś zaproszenie. Wybornie. Bądź pozdrowiona, jestem Erlornas z "
+"Wesmere. Twoja obecność tutaj mnie... zaskoczyła."
 
 #. [message]: speaker=Linaera
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:244
@@ -1268,8 +1253,8 @@ msgid ""
 "Scarcely less than I find yours, my lord elf, but I would welcome your aid "
 "against these orcs. They have been besieging my tower for weeks."
 msgstr ""
-"Nie mniej niż ja jestem zaskoczona twoją, mój elfi lordzie, choć z radością "
-"przyjęłabym pomoc w walce z tymi orkami. Oblegają moją wieżę od tygodni."
+"Nie mniej niż ja jestem zaskoczona twoją, panie, choć z radością przyjęłabym "
+"pomoc w walce z tymi orkami. Oblegają moją wieżę od tygodni."
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:248
@@ -1285,8 +1270,8 @@ msgstr ""
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:252
 msgid "Count me an ally, then, lord Erlornas. We can defeat them together."
 msgstr ""
-"W takim razie możesz traktować mnie jako sojuszniku, lordzie Erlornas. Razem "
-"możemy ich pokonać."
+"W takim razie możesz traktować mnie jako sojusznika, lordzie Erlornas. Razem "
+"zdołamy ich pokonać."
 
 #. [message]: role=Advisor
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:272
@@ -1294,8 +1279,8 @@ msgid ""
 "My lord... humans cannot be trusted! They shift their allegiances with the "
 "changing of the wind!"
 msgstr ""
-"Panie... ludziom nie można ufać! Zmieniają sojusze jak proporzec kierunek na "
-"wietrze!"
+"Panie... ludziom nie można ufać! Zmieniają sojusze jak chorągiewka kierunek "
+"na wietrze!"
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:276
@@ -1303,25 +1288,25 @@ msgid ""
 "That may be, but I do not think this one will betray us to the orcs. And we "
 "may need her assistance, too: that is a powerful force of orcs ahead."
 msgstr ""
-"Może i tak, ale nie sądzę, by ten akurat człowiek wydał nas orkom. Zresztą "
-"my również możemy potrzebować jej pomocy - przed nami potężna armia orków."
+"Może i tak, ale nie sądzę, by akurat ona wydała nas orkom. Zresztą my "
+"również możemy potrzebować jej pomocy — przed nami potężna armia orków."
 
 #. [message]: id=Linaera
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:288
 #: data/campaigns/An_Orcish_Incursion/scenarios/06_A_Detour_through_the_Swamp.cfg:128
 msgid "Alas, Erlornas, I have failed us..."
-msgstr ""
+msgstr "Wybacz, Erlornasie, zawiodłam nas..."
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:306
-#, fuzzy
 msgid ""
 "And that is well ended. But, Linaera, there is somewhat else that concerns "
 "me. You are a mage; do you not feel something... wrong... to the east of "
 "here?"
 msgstr ""
-"Wszystko znakomicie się układa. Jednak jest coś, co mnie martwi, Linaero. "
-"Jesteś magiem, czy nie czujesz, że coś jest... nietak... na wschód stąd?"
+"Kolejne starcie kończy się naszym zwycięstwem. Jedna rzecz mnie jednak "
+"niepokoi, Linaero. Jesteś magiem... czy ty też wyczuwasz na wschód stąd "
+"coś... nienaturalnego?"
 
 #. [message]: speaker=Linaera
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:310
@@ -1331,10 +1316,10 @@ msgid ""
 "to deal with it myself, but if you elves revere the green earth I think you "
 "will want it abolished as much as do I."
 msgstr ""
-"Też to czuję. Coś złego zadomowiło się w pobliskiej dolnie, a jego sługusy "
-"węszą wokół mojej domeny. Zamierzałam rozprawić się z nimi sama, ale skoro "
-"elfy tak bardzo miłują zieloną ziemię, to z pewnością nie mniej niż mnie "
-"będzie wam zależeć na ich zniszczeniu."
+"Też to czuję. Coś złego zadomowiło się w pobliskiej dolinie, a sługi zła "
+"węszą na granicach moich ziem. Zamierzałam rozprawić się z nimi sama, ale "
+"skoro elfy tak bardzo miłują zieloną ziemię, to z pewnością nie mniej niż "
+"mnie będzie wam zależeć na ich zniszczeniu."
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:314
@@ -1439,14 +1424,13 @@ msgstr "Pokonaj Rualshę"
 
 #. [message]: speaker=Lomarfel
 #: data/campaigns/An_Orcish_Incursion/scenarios/07_Showdown.cfg:222
-#, fuzzy
 msgid ""
 "My lord! We have ridden hard for over a week to catch up with you! The "
 "Ka’lian has deliberated, and asks you to defeat Rualsha quickly before he "
 "can muster a full invasion force."
 msgstr ""
 "Mój panie! Jechaliśmy forsownie przez ponad tydzień, by cię dogonić! Rada "
-"Ka'lian podjęła decyzję: powinieneś pokonać Rualshę jak najszybciej, nim "
+"Ka’lian podjęła decyzję: powinieneś pokonać Rualshę jak najszybciej, nim "
 "zdoła zgromadzić pełną armię do inwazji."
 
 #. [message]: speaker=Rualsha
